--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -3642,6 +3642,11 @@ spezifiziert den Auszug 1 usw.
           "LINE_THICK"        : 0.5,
           "LINE_THIN"         : 0.1,
           "REST_SIZE"         : [4, 2],
+          "color"             : {
+            "color_default"  : "black",
+            "color_variant1" : "grey",
+            "color_variant2" : "darkgrey"
+          },
           "jumpline_anchor"   : [3, 1],
           "limit_a3"          : true,
           "minc"              : {},
@@ -3903,6 +3908,11 @@ Notenbild gezielt optimieren.
       "LINE_THICK"        : 0.5,
       "LINE_THIN"         : 0.1,
       "REST_SIZE"         : [4, 2],
+      "color"             : {
+        "color_default"  : "black",
+        "color_variant1" : "grey",
+        "color_variant2" : "darkgrey"
+      },
       "jumpline_anchor"   : [3, 1],
       "limit_a3"          : true,
       "minc"              : {},
@@ -3916,8 +3926,8 @@ Notenbild gezielt optimieren.
 \end{verbatim}
 
 \subsection{\texorpdfstring{\texttt{extract.0.layout.DRAWING\_AREA\_SIZE}
-- Größe der
-Zeichenfläche}{extract.0.layout.DRAWING\_AREA\_SIZE - Größe der Zeichenfläche}}\label{extract.0.layout.DRAWINGux5fAREAux5fSIZE}
+-
+Zeichenfl.Größe}{extract.0.layout.DRAWING\_AREA\_SIZE - Zeichenfl.Größe}}\label{extract.0.layout.DRAWINGux5fAREAux5fSIZE}
 
 Hier kannst du die Größe der Zeichenfläche einstellen. Allerdings hat
 aktuell nur die vertikale Größe einen Einfluss. Damit kann man bei
@@ -3994,6 +4004,83 @@ berücksichtigt wird, da das Pausensymbol nicht verzerrt werden darf.
 
 \begin{verbatim}
     "REST_SIZE": [4, 2]
+      
+\end{verbatim}
+
+\subsection{\texorpdfstring{\texttt{extract.0.layout.color} -
+Farbeinstellung}{extract.0.layout.color - Farbeinstellung}}\label{extract.0.layout.color}
+
+Hier kannst du die Farbe für verschiedene Elemente einstellen.
+
+\begin{quote}
+\textbf{Hinweis} Die Farbe von varianten Abnschnitten alterniert
+zwischen variant1 und variant2. Wenn du beide gleich einstellst, dann
+werden die varianten Abschnitte gleichermassen eingefärbt.
+
+Wenn du beide auf den gleichen wert wie ``default'' stellst, dann werden
+variante Abschnitte nicht mehr durch Farbe abgesetzt.
+\end{quote}
+
+\begin{verbatim}
+    "color": {
+      "color_default"  : "black",
+      "color_variant1" : "grey",
+      "color_variant2" : "darkgrey"
+    }
+      
+\end{verbatim}
+
+\subsection{\texorpdfstring{\texttt{extract.0.layout.color.color\_default}
+-
+Sonstiges}{extract.0.layout.color.color\_default - Sonstiges}}\label{extract.0.layout.color.colorux5fdefault}
+
+Hier wählst die Grundfarbe für die Ausgabe. Diese Farbe wird bei allen
+Elementen verwendet, die keine spzeifische Farbeinstellung haben.
+
+\begin{verbatim}
+    "color_default": "black"
+      
+\end{verbatim}
+
+\subsection{\texorpdfstring{\texttt{extract.0.layout.color.color\_variant1}
+-
+Variante1}{extract.0.layout.color.color\_variant1 - Variante1}}\label{extract.0.layout.color.colorux5fvariant1}
+
+Hier wählst du die Farbe in der variante Abschnitte 1, 3, 5 etc.
+dargestellt werden.
+
+\begin{quote}
+\textbf{Hinweis} Die Farbe von varianten Abnschnitten alterniert
+zwischen variant1 und variant2. Wenn du beide gleich einstellst, dann
+werden die varianten Abschnitte gleichermassen eingefärbt.
+
+Wenn du beide auf den gleichen wert wie ``default'' stellst, dann werden
+variante Abschnitte nicht mehr durch Farbe abgesetzt.
+\end{quote}
+
+\begin{verbatim}
+    "color_variant1": "grey"
+      
+\end{verbatim}
+
+\subsection{\texorpdfstring{\texttt{extract.0.layout.color.color\_variant2}
+-
+Variante2}{extract.0.layout.color.color\_variant2 - Variante2}}\label{extract.0.layout.color.colorux5fvariant2}
+
+Hier wählst du die Farbe in der variante Abschnitte 2,4,6 etc.
+dargestellt werden.
+
+\begin{quote}
+\textbf{Hinweis} Die Farbe von varianten Abnschnitten alterniert
+zwischen variant1 und variant2. Wenn du beide gleich einstellst, dann
+werden die varianten Abschnitte gleichermassen eingefärbt.
+
+Wenn du beide auf den gleichen wert wie ``default'' stellst, dann werden
+variante Abschnitte nicht mehr durch Farbe abgesetzt.
+\end{quote}
+
+\begin{verbatim}
+    "color_variant2": "darkgrey"
       
 \end{verbatim}
 
