#151 fixed handling of colors
only notes are colorized
fixed color initialization of Drawables.

note that annotation is still not colorized

added presets

fix typo in localization

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -56,6 +56,8 @@
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
+    "color_off": "Var. End sw",
+    "color_on":  "Var. End farbig",
     "color_variant1": "Variante1",
     "color_variant2": "Variante2",
     "compact": "kompakt",
@@ -241,7 +243,7 @@
     "pack_min_increment": "min. Inkrement",
     "packer": "Packer",
     "packer_compact": "Packer kompakt",
-    "packer_regular": "Parker norm",
+    "packer_regular": "Packer normal",
     "page annotation": "Seitenbeschriftung",
     "partname": "Partname",
     "Perspective": "Ansicht",
