--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -165,6 +165,8 @@
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
+    "color_off": "Var. End sw",
+    "color_on": "Var. End farbig",
     "color_variant1": "Variante1",
     "color_variant2": "Variante2",
     "compact": "kompakt",
@@ -348,7 +350,7 @@
     "pack_min_increment": "min. Inkrement",
     "packer": "Packer",
     "packer_compact": "Packer kompakt",
-    "packer_regular": "Parker norm",
+    "packer_regular": "Packer normal",
     "page annotation": "Seitenbeschriftung",
     "partname": "Partname",
     "Perspective": "Ansicht",
