--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -114,8 +114,12 @@
     "-": "-",
     "0": "0",
     "1": "1",
+    "18-strings-b-e": "18 Saiten b-e",
     "2": "2",
+    "21-strings-a-f": "21 Saiten a-f",
+    "25-strings-g-g": "25 Saiten g-g",
     "3": "3",
+    "37-strings-g-g": "37 Saiten g-g",
     "4": "4",
     "5": "5",
     "6": "6",
@@ -125,6 +129,7 @@
     "a3_offset": "Offset für A3",
     "A4": "A4",
     "a4_offset": "Offset für A4",
+    "a4_pages": "Seiten bei A4",
     "abc Tutorial concise": "ABC Tutorial kompakt",
     "abc Tutorial detail": "ABC Tutorial ausführlich",
     "abc Tutorial": "ABC - Einführung",
@@ -268,13 +273,15 @@
     "Help": "Hilfe",
     "Homepage": "Homepage",
     "horizontal position": "horizontale Position (von links nach rechts)",
-    "hpos": "horizontale Position",
+    "hpos": "horiz. Position",
     "Id": "Identifikationsnummer",
     "in distance": "Abstand der Eingangslinie",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
     "Insert Addon": "Zusatz einfügen",
+    "instrument specific": "Intrument spez.",
+    "instrument": "Instrument",
     "Interact with dropbox": "Arbeiten mit Dropbox",
     "italic": "kursiv",
     "jumpline_anchor": "Sprungl.Anker",
@@ -396,15 +403,17 @@
     "restposition": "Position der Pausen",
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "right": "rechts",
+    "saitenspiel": "Saitenspiel",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "set screen perspective": "Bildschirmansicht wählen",
+    "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
     "shape": "Linienform",
     "Shifter": "links/rechts Verschiebung",
     "short": "short",
     "SHORTEST_NOTE": "kürzeste Note",
     "show all panes": "Zeigt alle Fenster an",
     "show": "anzeigen",
-    "show_border": "Blattbegrenzg. zeichnen",
+    "show_border": "Blattbegr. zeich.",
     "SHOW_SLUR": "zeige Bindebögen",
     "size": "Größe",
     "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
