WIP# 167: initial attempt

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -107,9 +107,7 @@
     "Yes": "Ja",
     "Yesterday": "Gestern",
     "Your remote data source record count has changed, reloading from the first record.": "Die Datenquelle hat sich geändert, lade Daten ab erstem Eintrag neu.",
-    "flowline": "Melodieliniexxx",
-    "subflowline": "Hilfsmelodielinie",
-    "create": "erzeugen",
+    "---this-is-the -end": "",
     "": "",
     "-": "-",
     "0": "0",
@@ -181,10 +179,11 @@
     "could not find extract with number": "Es gibt keinen Auszug mit nummer",
     "could not open file": "konnte Datei nicht öffnen",
     "countnotes": "Zählmarken",
-    "cp1": "Kontrollpunkt 1",
-    "cp2": "Kontrollpunkt 2",
+    "cp1": "cp1",
+    "cp2": "cp2",
     "Create new sheet": "Neues Blatt erstellen",
     "Create new Sheet": "Neues Musikstück erstellen",
+    "create": "erzeugen",
     "current extract": "aktueller Auszug",
     "d1": "**--d1",
     "d12": "**--d12",
@@ -258,6 +257,7 @@
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
     "Flowline": "Flußlinie",
+    "flowline": "Flußlinie",
     "flowlines": "Flußlinien",
     "Folder in Dropbox": "Ordner in der Dropbox",
     "followup distance": "Abstand der Folgelinie",
