--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -72,8 +72,8 @@
     "could not find extract with number": "Es gibt keinen Auszug mit nummer",
     "could not open file": "konnte Datei nicht öffnen",
     "countnotes": "Zählmarken",
-    "cp1": "Kontrollpunkt 1",
-    "cp2": "Kontrollpunkt 2",
+    "cp1": "cp1",
+    "cp2": "cp2",
     "Create new sheet": "Neues Blatt erstellen",
     "Create new Sheet": "Neues Musikstück erstellen",
     "create": "erzeugen",
@@ -150,6 +150,7 @@
     "fit to viewport":"in Anzeigebereich\neinpassen",
     "fit" : "eingepasst",
     "Flowline": "Flußlinie",
+    "flowline": "Flußlinie",
     "flowlines": "Flußlinien",
     "Folder in Dropbox": "Ordner in der Dropbox",
     "followup distance": "Abstand der Folgelinie",
