--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -165,6 +165,7 @@
     "before_colon_n": "**--before_colon_n",
     "beforeColonN": "beforeColonN",
     "bold": "fettdruck",
+    "c_jumplines": "Sprunglinien",
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
@@ -179,6 +180,7 @@
     "could not find extract with number": "Es gibt keinen Auszug mit nummer",
     "could not open file": "konnte Datei nicht öffnen",
     "countnotes": "Zählmarken",
+    "countnote": "Zählmarke",
     "cp1": "cp1",
     "cp2": "cp2",
     "Create new sheet": "Neues Blatt erstellen",
@@ -198,6 +200,7 @@
     "d64": "**--d64",
     "d8": "**--d8",
     "decimals": "Dezimalstellen",
+    "decoration": "Dekoration",
     "default": "Vorgabewert",
     "defaults": "Vorgabewerte",
     "Demo": "Demonstration",
@@ -228,10 +231,12 @@
     "Edit printer correction paerameters": "Druckeranpassungen bearbeiten",
     "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten\nim aktuellen Auszug",
     "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
+    "edit shape of repeat signs": "Darstellung der Wiederholungszeichen bearbeiten",
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "Effective value": "aktuell wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
+    "Empty voice": "Stimme ist leer",
     "end-of-translagion": "end-of-translation",
     "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
     "Enter Harp": "Harfeneingabe",
@@ -280,7 +285,7 @@
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
     "Insert Addon": "Zusatz einfügen",
-    "instrument specific": "Intrument spez.",
+    "instrument specific": "Intrumentspezifika",
     "instrument": "Instrument",
     "Interact with dropbox": "Arbeiten mit Dropbox",
     "italic": "kursiv",
@@ -394,6 +399,7 @@
     "regular": "normal",
     "Render previews": "Vorschauen neu errechnen",
     "Render": "Rendern",
+    "repeat signs": "Wiederholungszeichen",
     "repeatend": "Wiederholungsende",
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
@@ -461,6 +467,7 @@
     "T02_copyright_music": "T02 Copyright Musik",
     "T03_copyright_harpnotes": "T03 Copyright Unterlegnoten",
     "T04_to_order": "T04 zu beziehen bei",
+    "T05_printed_extracts": "T05 verfügbare Auszüge",
     "T99_do_not_copy": "T99 bitte nicht kopieren",
     "target to jump to": "Sprungziel",
     "templates": "Vorlagen",
@@ -500,6 +507,7 @@
     "Y-position": "Y-position",
     "Y_SCALE": "Vertikale Skalierung",
     "you are not logged in to dropbox": "Du bist nicht bei Dropbox angemeldet",
+    "you have multiple %%score statements": "Du hast mehr als eine %%score Zeile",
     "you need to logout if you want to change the application scope": "Du musst dich abmelden um den Zugriffstyp zu ändern",
     "Zombie Accesstoken revoked; do not use Browser back after login to dropbox": "Zombie Zugriffstoken gelöscht. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
