support for 25 string bass harp #180

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -9,6 +9,7 @@
     "2": "2",
     "21-strings-a-f": "21 Saiten a-f",
     "25-strings-g-g": "25 Saiten g-g",
+    "25-strings-G-g Bass": "**--25-strings-G-g Bass",
     "3": "3",
     "37-strings-g-g": "37 Saiten g-g",
     "4": "4",
