initial support for working with file templates #71

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -8,8 +8,8 @@
     "18-strings-b-e": "18 Saiten b-e",
     "2": "2",
     "21-strings-a-f": "21 Saiten a-f",
+    "25-strings-G-g Bass": "25 Saiten G-g Bass",
     "25-strings-g-g": "25 Saiten g-g",
-    "25-strings-G-g Bass": "**--25-strings-G-g Bass",
     "3": "3",
     "37-strings-g-g": "37 Saiten g-g",
     "4": "4",
@@ -150,6 +150,7 @@
     "extract": "Auszug",
     "Extract-Annotation": "Auszugsbeschriftung",
     "File": "Datei",
+    "filebase": "Dateibasis",
     "Filename not specified in song add an F: instruction": "Kein Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
     "filenamepart": "Filename-Zusatz",
     "Files saved to dropbox": "Dateien in Dropbox gespeichert",
@@ -371,6 +372,7 @@
     "T05_printed_extracts": "T05 verfügbare Auszüge",
     "T99_do_not_copy": "T99 bitte nicht kopieren",
     "target to jump to": "Sprungziel",
+    "template": "Dateivorlate",
     "templates": "Vorlagen",
     "tempo change not suported by zupfnoter": "Zupfnoter unterstüzt keine Tempoänderungen",
     "Text of annotation": "Text der Notenbeschriftung",
