--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -524,6 +524,7 @@
     "Zupfnoter": "Zupfnoter",
     "_ende_der_liste": "",
     "+: lyric without music": "+: Liedtext ohne Musik",
+    "+: symbol line without music": "+: symbol line without music",
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
     "'{' in grace note": "'{' in Verzierungsnote",
     "'}', ')' or ']' missing in %%staves": "'}', ')' oder ']' fehlt in  %%staves",
@@ -556,8 +557,6 @@
     "Bad %%stafflines value": "fehlerhafter Wert für %%stafflines",
     "Bad %%staffscale value": "fehlerhafter Wert für %%staffscale",
     "Bad char '$1' in M:": "fehlerhaftes Zeichen '$1' in M:",
-    "Bad character '}'": "fehlerhaftes Zeichen '}'",
-    "Bad character ')'": "fehlerhaftes Zeichen ')'",
     "Bad character '$1'": "fehlerhaftes Zeichen '$1'",
     "Bad duration '$1' in M:": "fehlerhafte Dauer '$1' in M:",
     "Bad integer value": "fehlerhafte Ganzzahl",
@@ -578,6 +577,7 @@
     "Cannot have !$1! on a head": "!$1! kann nicht im Kopfbereich stehen",
     "Cannot have %%fullsvg inside a tune": "'%%fullsvg' kann nicht innerhalb einer Stimme stehen",
     "Cannot have a bar in grace notes": "Taktstrich in Vorschlagnote nicht erlaubIl ne peut pas y avoir de barre dans les notes d'agrément",
+    "Cannot have V:* in tune body": "Cannot have V:* in tune body",
     "Cannot read file '$1'": "File '$1' kann nicht gelesen werden",
     "Decoration ignored": "Dekoration ignoriert",
     "Empty line in tune header - ignored": "Leerzeile in Kopfbereich - ignoriert",
@@ -615,12 +615,15 @@
     "Not a note in grace note sequence": "Keine Note in Sequenz von Vorschlagnoten",
     "Not an ASCII character": "kein ASCII - Zeichen",
     "Not enough measure bars for lyric line": "nicht genug Takte für Liedtextzeile",
+    "Not enough measure bars for symbol line": "Not enough measure bars for symbol line",
     "Not enough measures for %%repeat": "nicht genug Takte für %%repeat",
     "Not enough parameters in %%map": "nicht genug Parameter in  %%map",
     "Not enough symbols after repeat sequence": "nicht genug Symbole nach einer Wiederholungssequenz",
     "Not enough notes/rests for %%repeat": "nicht genug Noten/Pausen für %%repeat",
     "Note too long": "Note zu lang",
     "Note too short": "Note zu kurz",
+    "s: without music": "s: without music",
+    "Too many elements in symbol line": "Too many elements in symbol line",
     "Too many include levels": "Verschachtelung für include zu tiefr",
     "Too many ties": "zu viele Haltebogen",
     "Too many words in lyric line": "zu viele Worte in Liedtextzeile",
