improve Message "no ABC found" #184

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -349,6 +349,7 @@
     "New Entry": "Neuer Eintrag",
     "New": "Neu",
     "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
+    "no suitable ABC found": "keine passende ABC Eingabe gefunden",
     "no preview available yet": "Noch keine Vorschau verfügbar",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
