--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -134,6 +134,7 @@
     "abc Tutorial": "ABC - Einführung",
     "abc": "ABC-Notation",
     "abc_parser": "abc_parser",
+    "Access token lost; do note use browser back or refresh button in login procedure.": "Zugriffstoken verloren.<br/>Bitte während der login - Prozedur <b>nicht auf Zurück oder Refresh im Brwoser drücken</b>.<br/>Bitte noch einmal Dropbox/Ausloggen, danach mit Dropbox/Einloggen wieder einloggen.",
     "Add a draggable mark": "Verschiebemarke einfügen",
     "Add a Jump": "Sprung einfügen",
     "Add a Jumptarget": "Sprungziel einfügen",
@@ -325,7 +326,6 @@
     "Login": "Einloggen",
     "Logout from Dropbox": "bei Dropbox ausloggen",
     "Logout": "Ausloggen",
-    "Lost Access token. This should not happen. Please file a bug report.": "Zugriffstoken verloren. \nDas sollte nicht passieren. Bitte kontaktiere Zupfnoter-Entwicklung\nBitte noch einmal Dropbox/Ausloggen, danach mit Dropbox/Einloggen wieder einloggen.",
     "lyrics": "Liedtexte",
     "Manual": "Benutzerhandbuch",
     "manual_sheet": "Manuelle Vorlage",
@@ -349,8 +349,8 @@
     "New Entry": "Neuer Eintrag",
     "New": "Neu",
     "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
-    "no suitable ABC found": "keine passende ABC Eingabe gefunden",
     "no preview available yet": "Noch keine Vorschau verfügbar",
+    "no suitable ABC found": "keine passende ABC Eingabe gefunden",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
