--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -525,7 +525,7 @@
     "Zupfnoter": "Zupfnoter",
     "_ende_der_liste": "",
     "+: lyric without music": "+: Liedtext ohne Musik",
-    "+: symbol line without music": "+: symbol line without music",
+    "+: symbol line without music": "+: Symbolzeile ohne Musik",
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
     "'{' in grace note": "'{' in Verzierungsnote",
     "'}', ')' or ']' missing in %%staves": "'}', ')' oder ']' fehlt in  %%staves",
@@ -566,8 +566,7 @@
     "Bad note in %%map": "fehlerhafte Note in %%map",
     "Bad page width": "fehlerhafte Seitenbreite",
     "Bad program in %%MIDI": "falsches Program in %%MIDI",
-    "Bad scale value in %%font": "fehlerhafter scale - Wert in %%font",
-    "Bad stafflines= value": "fehlerhafter Wert für stafflines=",
+    "Bad scale value in %%font": "fehlerhafter Wert für scale in %%font",
     "Bad tie": "fehlerhafter Haltebogen",
     "Bad transpose value": "fehlerhafter Wert für transpose",
     "Bad user character '$1'": "falsches benutzerdefiniertes Zeichen '$1' in U:/%%user",
@@ -575,10 +574,11 @@
     "Bad value in $1": "fehlerhafter Wert in $1",
     "Bad voice ID in %%staves": "Fehlerhafte ID für Stimme in %%staves",
     "Bar in repeat sequence": "Taktstrich in Wiederholungssequenz",
-    "Cannot have !$1! on a head": "!$1! kann nicht im Kopfbereich stehen",
-    "Cannot have %%fullsvg inside a tune": "'%%fullsvg' kann nicht innerhalb einer Stimme stehen",
-    "Cannot have a bar in grace notes": "Taktstrich in Vorschlagnote nicht erlaubIl ne peut pas y avoir de barre dans les notes d'agrément",
-    "Cannot have V:* in tune body": "Cannot have V:* in tune body",
+    "Cannot have !$1! on a head": "!$1! im Kopfbereich nicht erlaubt",
+    "Cannot have %%fullsvg inside a tune": "'%%fullsvg' innerhalb einer Stimme nicht erlaubt",
+    "Cannot have a bar in grace notes": "Taktstrich in Vorschlagnote nicht erlaubt",
+    "Cannot have a broken rhythm in grace notes": "gebrochener Rythmus in Ziernoten nicht erlaubt ",
+    "Cannot have V:* in tune body": "V:* im Notenbereich nicht erlaubt",
     "Cannot read file '$1'": "File '$1' kann nicht gelesen werden",
     "Decoration ignored": "Dekoration ignoriert",
     "Empty line in tune header - ignored": "Leerzeile in Kopfbereich - ignoriert",
@@ -616,7 +616,7 @@
     "Not a note in grace note sequence": "Keine Note in Sequenz von Vorschlagnoten",
     "Not an ASCII character": "kein ASCII - Zeichen",
     "Not enough measure bars for lyric line": "nicht genug Takte für Liedtextzeile",
-    "Not enough measure bars for symbol line": "Not enough measure bars for symbol line",
+    "Not enough measure bars for symbol line": "Nicht genügend Takte für eine Symbolzeile",
     "Not enough measures for %%repeat": "nicht genug Takte für %%repeat",
     "Not enough parameters in %%map": "nicht genug Parameter in  %%map",
     "Not enough symbols after repeat sequence": "nicht genug Symbole nach einer Wiederholungssequenz",
